--- a/style.css
+++ b/style.css
@@ -47,9 +47,18 @@ a{
     color:var(--color-white);
 }
 ul{
-    list-style:none;
     padding-left:0px;
 }
+li{
+    list-style:none;
+}
+button{
+    background-color:transparent;
+    cursor: pointer;
+    border:none;
+    outline:none;
+}
+
 /* 폰트 설정 */
 h1{
     font-size:var(--font-large);
@@ -107,4 +116,33 @@ h3{
 
 .navbar__menu__item:hover{
     background-color:var(--color-light-grey);
+}
+
+/* Home */
+
+#home{
+    background:url("images/home-background.png")center/cover no-repeat;
+    padding:40px;
+    text-align:center;
+}
+.home__avatar{
+    width:300px;
+    height:300x;
+    border-radius:50%;
+    border:2px solid var(--color-blue);
+}
+
+.home__title,
+.home__description{
+    color:var(--color-light-grey)
+}
+
+.home__contact{
+    font-size:var(--font-regular);
+    font-weight:var(--weight-bold);
+    margin:24px;
+    padding:8px 12px;
+    border:2px solid var(--color-light-grey);
+    border-radius:var(--size-border-radius);
+    color:var(--color-light-grey-);
 }
