--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@
     
     /* Size */
     --size-border-radius: 4px;
+
+    /* transition */
+    --animation-duration:300ms;
 }
 
 /* 전체 설정 */
@@ -108,6 +111,7 @@ h3{
     margin:0 4px;
     cursor: pointer;
     border-radius: var(--size-border-radius);
+    transition: all 250ms ease;
 }
 
 .navbar__menu__item.active{
@@ -145,4 +149,80 @@ h3{
     border:2px solid var(--color-light-grey);
     border-radius:var(--size-border-radius);
     color:var(--color-light-grey-);
+    transition:all var(--animation-duration) ease;
+}
+.home__contact:hover{
+    background-color:var(--color-yellow);
+    transform:scale(1.15)
+}
+/* Section common */
+
+.section{
+    padding:50px;
+    text-align:center;
+    max-width:1200px;
+    margin: auto;
+}
+
+
+/* About */
+
+.about__majors{
+    display:flex;
+    justify-content:space-between;
+    margin: 80px 0;
+}
+
+.major__icon{
+    width:170px;
+    height:170px;
+    font-size:70px;
+    line-height:170px;
+    margin:auto;
+    color:var(--color-blue);
+    border:1px solid var(--color-blue);
+    border-radius:50%;
+    margin-bottom:16px;
+}
+.major__icon i{
+    transition: all var(--animation-duration) ease;
+}
+.major__icon:hover i{
+    color:var(--color-green);
+    transform:scale(1.2);
+}
+
+.major__title,
+.major__description{
+    color:var(--color-grey);
+}
+
+.major__description{
+    font-size:var(--font-small);
+}
+
+.school{
+    display:flex;
+    align-items: center;
+}
+.school__logo{
+    width:90px;
+    height:70px;
+    
+}
+.school__description{
+    margin: 0 16px;
+    text-align:left;
+}
+
+.school__name,
+.school__period{
+    color:var(--color-light-grey)
+}
+
+.school__name{
+    font-size:var(--font-small)
+}
+.school__period{
+    font-size:var(--font-micro)
 }
