--- a/style.css
+++ b/style.css
@@ -134,6 +134,13 @@ h3{
     height:300x;
     border-radius:50%;
     border:2px solid var(--color-blue);
+    transition:var(--animation-duration)
+}
+
+
+.home__avatar:hover{
+    transform:scale(1.1);
+    background-color:var(--color-yellow);
 }
 
 .home__title,
@@ -160,10 +167,13 @@ h3{
 .section{
     padding:50px;
     text-align:center;
-    max-width:1200px;
     margin: auto;
 }
 
+.section__container{
+    max-width:1200px;
+    margin:auto;
+}
 
 /* About */
 
@@ -217,12 +227,67 @@ h3{
 
 .school__name,
 .school__period{
-    color:var(--color-light-grey)
+    color:var(--color-light-grey);
+    margin-left:30px;
 }
 
 .school__name{
     font-size:var(--font-small)
 }
 .school__period{
-    font-size:var(--font-micro)
+    font-size:var(--font-micro);
+}
+
+/* Skill */
+
+#skills{
+    background-color:var(--color-yellow);
+}
+.skill{
+    margin-bottom:32px;
+}
+.skillset{
+    display:flex;
+    background-color:var(--color-light-grey);
+    color:var(--color-light-white);
+    margin:20px 0;
+}
+
+.skillset__title{
+    color:var(--color-white);
+    margin:auto;
+}
+
+.skillset__left{
+    flex-basis: 60%;
+    background-color:var(--color-grey);
+    padding:20px 40px;
+}
+.skill__description{
+    display:flex;
+    justify-content: space-between;
+}
+
+.skill__bar{
+    width:100%;
+    height:3px;
+    background-color:var(--color-light-white);
+}
+
+.skill__value{
+    height:3px;
+    background-color:var(--color-orange)
+}
+
+.skillset__right{
+    flex-basis: 40%;
+}
+.tools{
+    background-color:var(--color-dark-white);
+    /* padding-bottom:60px; */
+}
+
+.tools,
+.etc{
+    padding:20px;
 }
