--- a/style.css
+++ b/style.css
@@ -291,3 +291,102 @@ h3{
 .etc{
     padding:20px;
 }
+
+
+/* Work */
+
+.work__categories{
+    margin:40px;
+}
+
+.category__btn{
+    border: 1px solid var(--color-dark-white);
+    border-radius:var(--size-border-radius);
+    font-size:var(--font-regular);
+    padding:8px 48px;
+}
+
+.category__btn.active,
+.category__btn:hover{
+    background-color:var(--color-orange);
+    color:var(--color-white);
+}
+
+.category__btn.active .category__count,
+.category__btn:hover .category__count{
+    opacity:1;
+    top:0px;
+}
+
+.category__count{
+    background-color:var(--color-blue);
+    border-radius:50%;
+    color:var(--color-white);
+    display:inline-block;
+    width:24px;
+    height:24px;
+    line-height:24px;
+    position:relative;
+    top:-20px;
+    left:4px;
+    opacity:0;
+    transition:all var(--animation-duration) ease
+}
+
+.work__project{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+}
+.project{
+    position:relative;
+    width:280px;
+    height:250px;
+    margin: 2px;
+    background-color:var(--color-light-white);
+    display:flex;
+    justify-content: center;
+    align-items:center;
+}
+
+.project__img{
+    max-width:100%;
+    max-height:100%;
+}
+
+.project__description{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background-color:black;
+    opacity:0;
+    transform:translateY(10px);
+    transition:all var(--animation-duration) ease-in;
+}
+
+.project:hover .project__description{
+    opacity:0.7;
+    transform:translateY(0px);
+}
+
+.project__description h3,
+.project__description span{
+    color:var(--color-white);
+}
+
+.project__description h3:after{
+    content:'';
+    display:block;
+    width:25px;
+    height:2px;
+    background-color:var(--color-dark-white);
+    position:relative;
+    left:50%;
+    margin-left:-12.5px;
+    margin-top:8px;
+}
