--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ h3{
 }
 
 .project:hover .project__description{
-    opacity:0.7;
+    opacity:0.8;
     transform:translateY(0px);
 }
 
@@ -382,11 +382,41 @@ h3{
 .project__description h3:after{
     content:'';
     display:block;
-    width:25px;
+    width:230px;
     height:2px;
     background-color:var(--color-dark-white);
     position:relative;
-    left:50%;
+    left:38px;
     margin-left:-12.5px;
     margin-top:8px;
 }
+
+
+/* Contact */
+
+#contact{
+    background-color: var(--color-orange);
+}
+
+.contact__title,
+.contact__email,
+.contact__rights{
+    color:var(--color-white);
+}
+
+.contact__title{
+    margin:32px 0;
+}
+
+.contact__links{
+    font-size:var(--font-large);
+    margin: 24px 0;
+}
+
+.contact__links i{
+    transition: all var(--animation-duration) ease-in;
+}
+
+.contact__links i:hover{
+    transform:scale(1.2);
+    color:var(--color-black);
