--- a/style.css
+++ b/style.css
@@ -92,12 +92,23 @@ h3{
 
 /* Navbar */
 #navbar{
+    position:fixed;
+    width:100%;
     display:flex;
     justify-content: space-between;
-    background-color:var(--color-dark-white);
+    /* background-color:var(--color-dark-white); */
+    background-color: transparent;
     align-items:center;
-    color:var(--color-white);
+    color:var(--color-black);
     padding:16px;
+    padding-right:40px;
+    transition:all var(--animation-duration) ease-in-out;
+}
+
+#navbar.navbar--dark{
+    background-color:var(--color-dark-white);
+    padding:8px;
+    padding-right:40px;
 }
 
 .navbar__logo{
@@ -122,11 +133,11 @@ h3{
 }
 
 .navbar__menu__item.active{
-    border:1px solid var(--color-white);
+    border:1px solid var(--color-black);
 }
 
 .navbar__menu__item:hover{
-    background-color:var(--color-light-grey);
+    background-color:var(--color-yellow);
 }
 
 .navbar__toggle-btn{
@@ -144,6 +155,7 @@ h3{
     background:url("images/home-background.png")
     center/cover no-repeat;
     padding:40px;
+    padding-top:120px;
     text-align:center;
 }
 .home__avatar{
@@ -447,6 +459,9 @@ h3{
 /* 반응형 768px */
 
 @media screen and (max-width:768px){
+    .navbar__toggle-btn i{
+        color:var(--color-black);
+    }
     .navbar__toggle-btn{
         display:block;
     }
