--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ h3{
     top:-20px;
     left:4px;
     opacity:0;
-    transition:all var(--animation-duration) ease
+    transition:all var(--animation-duration) ease-out;
 }
 
 .work__project{
@@ -372,6 +372,12 @@ h3{
     flex-wrap:wrap;
     justify-content:center;
     margin-bottom:50px;
+    opacity:1;
+    transition:all var(--animation-duration) ease-in;
+}
+.work__project.animation{
+    opacity:0;
+    transform:scale(0.96) translateY(20px);
 }
 .project{
     position:relative;
@@ -382,8 +388,12 @@ h3{
     display:flex;
     justify-content: center;
     align-items:center;
+    
 }
 
+.project.invisible{
+    display:none;
+}
 .project__img{
     max-width:100%;
     max-height:100%;
