--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ h3{
 
 .navbar__toggle-btn{
     position:absolute;
-    top:20px;
+    top:10px;
     right:32px;
     font-size:30px;
     color:var(--color-white);
@@ -419,9 +419,8 @@ h3{
     transform:translateY(0px);
 }
 
-.project__description h3,
-.project__description span{
-    color:var(--color-white);
+.project__description h3{
+    color:var(--color-orange);
 }
 
 .project__description h3:after{
@@ -445,7 +444,8 @@ h3{
 
 .contact__title,
 .contact__email,
-.contact__rights{
+.contact__rights,
+.contact__phone{
     color:var(--color-white);
 }
 
@@ -496,12 +496,20 @@ h3{
     #navbar{
         flex-direction: column;
         align-items:flex-start;
+        background-color:var(--color-dark-white);
+        padding: 12px;
     }
     .navbar__menu{
         flex-direction:column;
         text-align:center;
         width:100%;
         display:none;
+    }
+    #navbar.navbar--dark{
+        padding:10px;
+    }
+    .navbar__menu.open{
+        display:block;
     }
 
     .major{
@@ -517,5 +525,17 @@ h3{
 
     .project{
         flex-grow:1;
+    }
+    
+    .project__description h3:after{
+        content:'';
+        display:block;
+        width:230px;
+        height:2px;
+        background-color:var(--color-dark-white);
+        position:relative;
+        left:50px;
+        transform:translateX(45%);
+        margin-top:8px;
     }
 }
