Responsive CSS : fix

--- a/style.css
+++ b/style.css
@@ -338,6 +338,7 @@ h3{
     border-radius:var(--size-border-radius);
     font-size:var(--font-regular);
     padding:8px 48px;
+    position:relative;
 }
 
 .category__btn.selected,
@@ -349,7 +350,7 @@ h3{
 .category__btn.selected .category__count,
 .category__btn:hover .category__count{
     opacity:1;
-    top:0px;
+    top:5px;
 }
 
 .category__count{
@@ -360,9 +361,9 @@ h3{
     width:24px;
     height:24px;
     line-height:24px;
-    position:relative;
-    top:-20px;
-    left:4px;
+    position:absolute;
+    top:-30px;
+    right:16px;
     opacity:0;
     transition:all var(--animation-duration) ease-out;
 }
@@ -438,6 +439,7 @@ h3{
 
 /* Contact */
 
+
 #contact{
     background-color: var(--color-orange);
 }
@@ -487,11 +489,25 @@ h3{
 /* 반응형 768px */
 
 @media screen and (max-width:768px){
+    :root{
+        --font-large:30px;
+        --font-medium:18px;
+        --font-regular:16px;
+        --font-small:14px;
+        --font-micro:12px;
+    }
+    .section{
+        padding:16px;
+        padding-top:40px;
+    }
     .navbar__toggle-btn i{
         color:var(--color-black);
     }
     .navbar__toggle-btn{
         display:block;
+        top:16px;
+        right:16px;
+        font-size:medium;
     }
     #navbar{
         flex-direction: column;
@@ -522,7 +538,10 @@ h3{
     .skillset{
         flex-direction: column;
     }
-
+    .category__btn{
+        margin:4px 0;
+        width:100%;
+    }
     .project{
         flex-grow:1;
     }
@@ -534,8 +553,14 @@ h3{
         height:2px;
         background-color:var(--color-dark-white);
         position:relative;
-        left:50px;
-        transform:translateX(45%);
+        left:55%;
+        transform:translateX(-50%);
         margin-top:8px;
+    }
+
+    .arrow-up{
+        right:25px;
+        bottom:15px;
+        font-size:30px;
     }
 }
