--- a/style.css
+++ b/style.css
@@ -161,12 +161,18 @@ h3{
 }
 .home__avatar{
     width:300px;
-    height:300x;
+    height:300px;
     border-radius:50%;
     border:2px solid var(--color-blue);
-    transition:var(--animation-duration)
+    transition:var(--animation-duration);
 }
-
+.home__avatar2{
+    width:300px;
+    height:300px;
+    border-radius:50%;
+    border:2px solid var(--color-blue);
+    transition:var(--animation-duration);
+}
 
 .home__avatar:hover{
     transform:scale(1.1);
