--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css?family=Jua:400');
 
 /* 전체 변수설정 */
 :root{
@@ -41,10 +42,11 @@
 /* 전체 설정 */
 *{
     box-sizing:border-box;
+    scroll-margin-top:50px;
 }
 body{
     margin:0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Jua';
     cursor:default;
 }
 a{
@@ -107,7 +109,8 @@ h3{
 
 #navbar.navbar--dark{
     background-color:var(--color-dark-white);
-    padding:8px;
+    padding:3px;
+    padding-left:20px;
     padding-right:40px;
     z-index:9999;
 }
@@ -134,6 +137,9 @@ h3{
     transition: all 250ms ease;
 }
 
+.navbar__menu__item.active{
+    border:1px solid var(--color-grey);
+}
 
 
 .navbar__menu__item:hover{
@@ -146,7 +152,7 @@ h3{
     top:10px;
     right:32px;
     font-size:30px;
-    color:var(--color-white);
+    color:var(--color-black);
     display:none;
 }
 
@@ -164,14 +170,8 @@ h3{
     height:300px;
     border-radius:50%;
     border:2px solid var(--color-blue);
-    transition:var(--animation-duration);
-}
-.home__avatar2{
-    width:300px;
-    height:300px;
-    border-radius:50%;
-    border:2px solid var(--color-blue);
-    transition:var(--animation-duration);
+    transition:all var(--animation-duration) ease;
+    cursor: pointer;
 }
 
 .home__avatar:hover{
@@ -227,18 +227,20 @@ h3{
     width:170px;
     height:170px;
     font-size:70px;
-    line-height:170px;
+    line-height:170px; 
     margin:auto;
-    color:var(--color-blue);
-    border:1px solid var(--color-blue);
-    border-radius:50%;
+    background-color:var(--color-light-white);
+    color:var(--color-orange);
+    border:1px solid var(-color-light-white);
+    border-radius:15%;
+    box-shadow: 5px 5px;
     margin-bottom:16px;
 }
 .major__icon i{
     transition: all var(--animation-duration) ease;
 }
 .major__icon:hover i{
-    color:var(--color-green);
+    color:var(--color-dark-pink);
     transform:scale(1.2);
 }
 
@@ -288,7 +290,7 @@ h3{
 }
 .skillset{
     display:flex;
-    background-color:var(--color-light-grey);
+    background-color:var(--color-yellow);
     color:var(--color-light-white);
     margin:20px 0;
 }
@@ -298,10 +300,12 @@ h3{
     margin:auto;
 }
 
-.skillset__left{
-    flex-basis: 60%;
-    background-color:var(--color-grey);
+.skillset__center{
+    flex-basis: 100%;
+    background-color:var(--color-light-grey);
     padding:20px 40px;
+    border-radius:25px;
+    box-shadow:10px 10px 15px 10px #C9C9C9;
 }
 .skill__description{
     display:flex;
@@ -310,27 +314,18 @@ h3{
 
 .skill__bar{
     width:100%;
-    height:3px;
+    height:20px;
     background-color:var(--color-light-white);
+    
 }
 
 .skill__value{
-    height:3px;
-    background-color:var(--color-orange)
+    height:20px;
+    background-color:var(--color-orange);
+    border-radius:0px 15px 15px 0px;
 }
 
-.skillset__right{
-    flex-basis: 40%;
-}
-.tools{
-    background-color:var(--color-dark-white);
-    /* padding-bottom:60px; */
-}
 
-.tools,
-.etc{
-    padding:20px;
-}
 
 
 /* Work */
@@ -345,6 +340,7 @@ h3{
     font-size:var(--font-regular);
     padding:8px 48px;
     position:relative;
+    transition: var(--animation-duration)
 }
 
 .category__btn.selected,
@@ -464,18 +460,19 @@ h3{
 .contact__links{
     font-size:var(--font-large);
     margin: 24px 0;
+    
 }
 
 .contact__links i{
-    transition: all var(--animation-duration) ease-in;
+    transition: all var(--animation-duration) ease;
 }
 
 .contact__links i:hover{
-    transform:scale(1.2);
-    color:var(--color-black);
+    transform:scale(1.5);
+    color:var(--color-yellow);
 }
 
-/* arrow */
+/* 화살표 버튼 */
 
 .arrow-up{
     position:fixed;
@@ -520,6 +517,7 @@ h3{
         align-items:flex-start;
         background-color:var(--color-dark-white);
         padding: 12px;
+        z-index:9999;
     }
     .navbar__menu{
         flex-direction:column;
@@ -546,7 +544,7 @@ h3{
     }
     .category__btn{
         margin:4px 0;
-        width:100%;
+        width:55%;
     }
     .project{
         flex-grow:1;
@@ -566,7 +564,7 @@ h3{
 
     .arrow-up{
         right:25px;
-        bottom:15px;
+        bottom:50px;
         font-size:30px;
     }
 }
